--- a/index.html
+++ b/index.html
@@ -2,40 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>[PHASE_04]: THE_GRAVE</title>
+    <title>[PHASE_04]: THE_GRAVE_DIMENSION</title>
     <style>
-        body { background: #000; margin: 0; height: 100vh; overflow: hidden; display: flex; align-items: center; justify-content: center; color: #fff; font-family: 'Courier New', monospace; cursor: none; }
-
+        body { background: #000; margin: 0; height: 100vh; overflow: hidden; display: flex; align-items: center; justify-content: center; color: #fff; font-family: 'Courier New', monospace; cursor: crosshair; }
+        
         #grave-container {
             position: relative; width: 100vw; height: 100vh;
             background: url('grave.jpg') no-repeat center center;
-            background-size: cover;
+            background-size: cover; display: none;
         }
 
+        /* টর্চলাইট মাস্ক ইফেক্ট */
         #flashlight {
             position: absolute; top: 0; left: 0; width: 100%; height: 100%;
-            background: radial-gradient(circle 120px at var(--x) var(--y), transparent 10%, rgba(0,0,0,0.98) 100%);
+            background: radial-gradient(circle 120px at var(--x) var(--y), transparent 0%, rgba(0,0,0,0.99) 100%);
             pointer-events: none;
         }
 
         #start-screen {
-            position: fixed; z-index: 100; background: #000; width: 100%; height: 100%;
-            display: flex; align-items: center; justify-content: center; flex-direction: column;
+            text-align: center; z-index: 100;
         }
 
-        button { background: none; border: 1px solid #ff0000; color: #ff0000; padding: 15px 30px; cursor: pointer; font-size: 20px; }
+        button { 
+            background: #000; border: 1px solid #ff0000; color: #ff0000; 
+            padding: 20px 40px; cursor: pointer; font-size: 22px; 
+            letter-spacing: 5px; box-shadow: 0 0 15px #ff0000;
+        }
+        button:hover { background: #ff0000; color: #000; }
     </style>
 </head>
 <body>
 
     <div id="start-screen">
         <button onclick="enterGrave()">ENTER THE GRAVE</button>
-        <p style="margin-top: 20px; color: #444;">(Headphones Recommended)</p>
+        <p style="margin-top: 20px; color: #444; font-size: 12px;">Use Headphones for better experience</p>
     </div>
 
-    <div id="grave-container" style="display:none;">
+    <div id="grave-container">
         <div id="flashlight"></div>
-        </div>
+    </div>
 
     <audio id="audio">
         <source src="boss_voice.mp3" type="audio/mpeg">
@@ -47,11 +52,12 @@
         const audio = document.getElementById('audio');
 
         function enterGrave() {
-            startScreen.style.display = 'none';
-            container.style.display = 'block';
-            audio.play();
+            startScreen.style.display = 'none'; // বাটন সরিয়ে ফেলবে
+            container.style.display = 'block'; // কবরের ছবি দেখাবে
+            audio.play(); // অডিও চালু করবে
         }
 
+        // মাউস নাড়ালে টর্চলাইটের পজিশন আপডেট হবে
         document.addEventListener('mousemove', e => {
             container.style.setProperty('--x', e.clientX + 'px');
             container.style.setProperty('--y', e.clientY + 'px');
