--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div id="start-screen">
         <button id="entry-btn">ENTER THE GRAVE</button>
-        <p style="margin-top: 20px; color: #666; font-size: 14px; letter-spacing: 2px;">মরণকূপে স্বাগতম...</p>
+        <p style="margin-top: 20px; color: #666; font-size: 14px; letter-spacing: 2px;">Come in</p>
     </div>
 
     <div id="grave-container">
