--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
         body { background: #000; margin: 0; height: 100vh; overflow: hidden; display: flex; align-items: center; justify-content: center; color: #fff; font-family: 'Courier New', monospace; cursor: crosshair; }
         
         #grave-container {
-            position: relative; width: 100vw; height: 100vh;
+            position: relative; 
+            width: 100vw; 
+            height: 100vh;
+
             background: url('grave.jpg') no-repeat center center;
-            background-size: cover; display: none;
+            background-size: contain; 
+            display: none;
+            background-color: #000;
         }
+
 
         #flashlight {
             position: absolute; top: 0; left: 0; width: 100%; height: 100%;
-            background: radial-gradient(circle 350px at var(--x) var(--y), transparent 0%, rgba(0,0,0,0.98) 85%);
+            background: radial-gradient(circle 250px at var(--x) var(--y), transparent 0%, rgba(0,0,0,0.99) 90%);
             pointer-events: none;
         }
 
@@ -22,18 +28,17 @@
 
         button { 
             background: #000; border: 2px solid #ff0000; color: #ff0000; 
-            padding: 25px 50px; cursor: pointer; font-size: 24px; 
-            letter-spacing: 5px; box-shadow: 0 0 20px #ff0000; font-weight: bold;
-            text-transform: uppercase;
+            padding: 20px 40px; cursor: pointer; font-size: 22px; 
+            letter-spacing: 3px; box-shadow: 0 0 15px #ff0000; font-weight: bold;
         }
-        button:hover { background: #ff0000; color: #000; box-shadow: 0 0 50px #ff0000; }
+        button:hover { background: #ff0000; color: #000; }
     </style>
 </head>
 <body>
 
     <div id="start-screen">
         <button id="entry-btn">ENTER THE GRAVE</button>
-        <p style="margin-top: 20px; color: #666; font-size: 14px; letter-spacing: 2px;">Come in</p>
+        <p style="margin-top: 20px; color: #555;">(Come in...)</p>
     </div>
 
     <div id="grave-container">
@@ -48,23 +53,14 @@
         const audio = document.getElementById('audio');
         const btn = document.getElementById('entry-btn');
 
-
         document.addEventListener('mousemove', e => {
             container.style.setProperty('--x', e.clientX + 'px');
             container.style.setProperty('--y', e.clientY + 'px');
         });
 
         btn.addEventListener('click', function() {
-
             audio.load();
-            audio.play().then(() => {
-                console.log("সাফল্যের সাথে অডিও বাজছে!");
-            }).catch(e => {
-                console.error("অডিও এরর:", e);
-
-                alert("Please check your volume or refresh!");
-            });
-
+            audio.play().catch(e => console.log("Audio logic error"));
             startScreen.style.display = 'none';
             container.style.display = 'block';
         });
